overflow fixed

--- a/tailwind.css
+++ b/tailwind.css
@@ -11,7 +11,7 @@ body.dark {
 }
 
 body{
-  @apply overflow-x-hidden md:overflow-x-hidden sm:overflow-x-hidden lg:overflow-x-hidden;
+  @apply overflow-x-hidden md:overflow-x-hidden sm:overflow-x-hidden lg:overflow-x-hidden left-0 right-0 bottom-0;
 }
 
 .nav-link {
